# gemini-supply

./: .env.sample  .envrc  .gitignore  .pre-commit-config.yaml  README.md  config.sample.yaml  pyproject.toml
.ai/: AGENTS.md  CLAUDE.md
.github/: copilot-instructions.md
docs/: 00-grocery-agent-design.md  01-home-assistant-shopping-lists.md  02-product-preferences.md  03-expanding-prefs-via-chat.md  04-multi-tab-browser-host.md  05-sneaky-auth.md  07-generalized-ha-access.md  08-activity-logging.md  RESEARCH-README.md  post-research-to-issue-10.sh  post_issue_comment.py  telegram-image-display-research.md
examples/: shopping_list.summary.txt  shopping_list.yaml
scripts/: get_telegram_chat_id.py  home_assistant_call.py  normalize.py  run_tests.sh  send_telegram_message.py
scripts/pre-commit/: check_no_path_dependencies.py
specs/: 00-grocery-agent-design.md  05-sneaky-auth.md  06-preference-evolution.md  07-generalized-ha-access.md
src/gemini_supply/: __init__.py  __main__.py  agent.py  auth.py  auth_scratch.py  cli.py  config.py  display.py  grocery_main.py  log.py  main.py  models.py  orchestrator.py  profile.py  prompt.py  term.py  tty_logger.py
src/gemini_supply/auth/: __init__.py  flow.py  short_fence.py
src/gemini_supply/computers/: __init__.py  agent_managed_page.py  authenticated_metro_browser.py  browser_host.py  browser_tab.py  camoufox_browser.py  computer.py  errors.py  keys.py  playwright_computer.py
src/gemini_supply/grocery/: __init__.py  home_assistant_shopping_list.py  shopping_list.py  types.py
src/gemini_supply/page/: srp.js
src/gemini_supply/preferences/: __init__.py  messenger.py  normalizer.py  service.py  store.py  types.py
src/gemini_supply/shopping/: __init__.py  models.py  orchestrator.py
src/gemini_supply/utils/: currency.py  strings.py
src/generative_supply/: __main__.py  agent.py  cli.py  config.py  log.py  models.py  orchestrator.py  profile.py  prompt.py  term.py  usage.py  usage_pricing.py
src/generative_supply/auth/: flow.py  short_fence.py
src/generative_supply/computers/: agent_managed_page.py  browser_host.py  computer.py
src/generative_supply/grocery/: home_assistant_shopping_list.py  shopping_list.py  types.py
src/generative_supply/preferences/: __init__.py  constants.py  exceptions.py  messenger.py  normalizer.py  service.py  store.py  types.py
src/generative_supply/utils/: currency.py
tests/: conftest.py  test_agent.py  test_auth.py  test_browser_host_tab.py  test_computer.py  test_home_assistant_shopping_list.py  test_playwright_computer.py  test_preferences_behavior.py  test_shopping_orchestrator.py  test_usage.py
