[project]
name = "generative-supply"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "better-exceptions>=0.3.3",
    "camoufox[geoip]>=0.4.11",
    "clypi>=1.8.1",
    "crawlee>=1.0.4",
    "google-genai>=1.40.0",
    "httpx>=0.28.1",
    "libsh>=0.2.0",
    "logfire>=4.13.2",
    "numpy>=2",
    "opencv-python>=4.12.0.88",
    "opentelemetry-instrumentation-google-genai>=0.4b0",
    "pillow>=10.4.0",
    "playwright==1.52.0",
    "pydantic-ai-slim[google]>=1.4.0",
    "pydantic-ai>=1.1.0",
    "pydantic==2.11.4",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.4.2",
    "python-telegram-bot[job-queue]>=21.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "structlog>=25.4.0",
    "textual-image>=0.8.4",
]

[project.scripts]
generative-supply = "generative_supply.__main__:main"
generative-supply-auth-scratch = "generative_supply.auth_scratch:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "ANN401", # any-type
    "B009",   # get-attr-with-constant
    "PYI032", # any-eq-ne-annotation
]

[tool.pyright]
reportUnknownMemberAccess = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownParameterType = "error"
reportUnsupportedDunderAll = "error"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "types-aiofiles>=25.1.0.20251011",
]
